# expenses

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  classifier.py  controller.py  format.py  import.py  main.py  model.py  plot.py  pyproject.toml  requirements.txt  setup.py  view.py
config/: categories.yaml
expenses/: __init__.py  classifier.py  plot.py
expenses/controller/: __init__.py  controller.py
expenses/model/: __init__.py  model.py
expenses/view/: __init__.py  view.py
